- Compare CLI smoke coverage now pins staged-finalize replacement behavior (stale pre-existing output roots are replaced and `.stage` residue is absent after successful finalize).
- Compare now fails closed when `--out` matches either input root (`COMPARE_OUT_CONFLICTS_INPUT`) to prevent destructive output-finalize collisions.
- Compare operator receipts now include full compare evidence links (`compare_receipt.json`, `compare_report.txt`, `weftend/README.txt`) instead of compare-receipt-only linkage.
- Compare operator receipts now also include `weftend/privacy_lint_v0.json`, and compare runs perform a final no-write privacy-lint recheck after final operator receipt write.
- Compare now enforces explicit no-orphan evidence validation before finalize (`COMPARE_EVIDENCE_CHAIN_INVALID`), requiring all produced compare artifacts (except `operator_receipt.json`) to be referenced in operator receipt entries.
- `run` command output now stages/finalizes (`<out>.stage` -> `<out>`), replacing stale out-roots and preventing partial output residue from appearing as finalized run evidence.
- `run` staged finalize now records stale-output presence as deterministic operator warning (`SAFE_RUN_EVIDENCE_ORPHAN_OUTPUT`) before replacing pre-existing unmanaged out-root files.
- `email unpack` output now stages/finalizes (`<out>.stage` -> `<out>`), replacing stale out-roots and preventing partial email-export residue from appearing as finalized output.
- `email safe-run` now prepares source-email normalization in a temporary workspace outside the target out-root, preventing self-input collisions and false orphan-output warnings under staged safe-run finalize behavior.
- `export-json` normalized summary output now stages/finalizes (`<out>.stage` -> `<out>`), preventing partial output residue and guaranteeing stale file replacement on successful finalize.